--- a/src/style.css
+++ b/src/style.css
@@ -837,7 +837,7 @@ a {
     border-radius: 10px;
     text-decoration: none;
     text-transform: capitalize;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
 }
 
 .cancel-order-btn {
@@ -1340,6 +1340,11 @@ tbody tr:nth-child(even) {
     background-color: white;
     padding: 5px;
     border-radius: 20%;
+}
+
+.away-1 {
+    display: flex;
+    justify-content: space-between;
 }
 
 .dash-stats {
